syntax = "proto3";

import "proto/mchost_spot_instance_payload.proto";

package mchost_spot_instance.service.v1;
option go_package = "./pb";

service SpotService {
  rpc GetTemplate (GetTemplateRequest) returns (GetTemplateResponse);
  rpc LaunchTemplate (LaunchTemplateRequest) returns (LaunchTemplateResponse);
  rpc StopTemplate (StopTemplateRequest) returns (StopTemplateResponse);
  rpc CreateTemplate (CreateTemplateRequest) returns (GetTemplateResponse);
}